--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     
-    <meta name="viewport"content="width=device-width, initial-scale=0.86, maximum-scale=5.0, minimum-scale=0.86" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 
 
 
